# kafka-cli

./: BUILD_STATUS.md  BUILD_SUCCESS.md  CLI_TEST_REPORT.md  CONSUMER_GROUPS_TEST_REPORT.md  CONTRIBUTING.md  Cargo.toml  DEVELOP.md  INSTALL.md  PHASE2_SUMMARY.md  PROJECT_OVERVIEW.md  README.md  TEST_REPORT.md  build.ps1  example.properties  kafka-cli.ps1  run-tests.ps1
.github/workflows/: rust.yml
docs/: ENHANCED_FEATURES_TEST_REPORT.md  PLAN.md  QUICKSTART.md  requirement.md
src/: lib.rs  main.rs
src/cli/: mod.rs
src/commands/: configs.rs  consume.rs  consumer_groups.rs  mod.rs  produce.rs  topics.rs
src/config/: mod.rs
src/kafka/: admin.rs  consumer.rs  consumer_groups.rs  mod.rs  producer.rs
tests/: README.md  integration_test.rs  requirements.txt  test_cli_functional.py
