[package]
name = "kafka-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive"] }
env_logger = "0.11.8"
futures-util = "0.3.31"
log = "0.4.28"
rdkafka = { version = "0.38.0", features = ["dynamic-linking", "tokio"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
